# Face-Detector-1MB-with-landmark

./: .gitattributes  LICENSE  README.md  calculate_paremeter_flop.py  convert_to_onnx.py  detect.py  test_widerface.py  train.py
Face_Detector_mnn/: CMakeLists.txt  README.md  common.cpp  common.h  main.cpp  reatinaface.cpp  retinaface.hpp
Face_Detector_mnn/mnn/include/MNN/: VCS.h
Face_Detector_mnn/model/: RFB.mnn
Face_Detector_ncnn/: CMakeLists.txt  FaceDetector.cpp  FaceDetector.h  main.cpp
Face_Detector_ncnn/model/: face.param
Face_Detector_ncnn/ncnn/lib/cmake/ncnn/: ncnnConfig.cmake
Face_Detector_ncnn/tools/: onnx2ncnn
data/: config.py  data_augment.py
models/: net.py  net_rfb.py  net_slim.py
weights/: RBF_Final.pth  mobilenet0.25_Final.pth  slim_Final.pth
